feat: scaffold predict radar web+worker with 24h deltas and alerts

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,19 @@ Desktop.ini
 
 # Logs
 *.log
+
+# Node
+node_modules/
+.next/
+dist/
+coverage/
+
+# Env
+.env
+.env.local
+
+# Build/cache
+.turbo/
+.cache/
+.npm-cache/
+.tools/
