--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,14 @@ BACKFILL_DAYS=30
 
 # Telegram (V1: global single channel)
 TELEGRAM_ENABLED=false
+TELEGRAM_MODE=bot
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
+# Telegram user-mode (MTProto). Use telegram:login to generate a session.
+TELEGRAM_API_ID=
+TELEGRAM_API_HASH=
+TELEGRAM_SESSION=
+TELEGRAM_TARGET=me
 TELEGRAM_COOLDOWN_MINUTES=30
 
 # Optional provider keys
